@@ -1,3 +1,5 @@
+# From gtkdatabox git repo, adapted
+
 lib_LTLIBRARIES		= libgtkdataboks.la
 libgtkdataboks_la_SOURCES= \
 			gtkdatabox.c\
@@ -6,15 +8,24 @@ libgtkdataboks_la_SOURCES= \
 			gtkdatabox_graph.c\
 			gtkdatabox_xyc_graph.c\
 			gtkdatabox_xyyc_graph.c\
-			gtkdatabox_points.c\
-			gtkdatabox_lines.c\
-			gtkdatabox_bars.c\
-			gtkdatabox_offset_bars.c\
-			gtkdatabox_regions.c\
+ 			gtkdatabox_points.c\
+            gtkdatabox_lines.c\
+            gtkdatabox_bars.c\
+            gtkdatabox_offset_bars.c\
+            gtkdatabox_regions.c\
 			gtkdatabox_markers.c\
-			gtkdatabox_cross_simple.c\
-			gtkdatabox_grid.c\
-			gtkdatabox_ruler.c\
+            gtkdatabox_cross_simple.c\
+            gtkdatabox_grid.c\
+			gtkdatabox_ruler.c
+
+libgtkdataboks_la_LDFLAGS= \
+		        #-version-info $(LT_CURRENT)\
+			#-release $(LT_RELEASE)\
+			-no-undefined \
+			@GTK_LIBS@
+
+
+include_HEADERS		= \
 			gtkdatabox_typedefs.h\
 			gtkdatabox.h\
 			gtkdatabox_marshal.h\
@@ -23,21 +34,14 @@ libgtkdataboks_la_SOURCES= \
 			gtkdatabox_xyc_graph.h\
 			gtkdatabox_xyyc_graph.h\
  			gtkdatabox_points.h\
-			gtkdatabox_lines.h\
-			gtkdatabox_bars.h\
-			gtkdatabox_offset_bars.h\
-			gtkdatabox_regions.h\
+            gtkdatabox_lines.h\
+            gtkdatabox_bars.h\
+            gtkdatabox_offset_bars.h\
+            gtkdatabox_regions.h\
 			gtkdatabox_markers.h\
-			gtkdatabox_cross_simple.h\
-			gtkdatabox_grid.h\
+            gtkdatabox_cross_simple.h\
+            gtkdatabox_grid.h\
 			gtkdatabox_ruler.h
-
-libgtkdataboks_la_LDFLAGS= \
-			-no-undefined\
-			@GTK_LIBS@
-#		        -version-info $(LT_CURRENT)
-#			-release $(LT_RELEASE)
-
 
 EXTRA_DIST = gtkdatabox_marshal.list
 
