@@ -1,6 +1,5 @@
-
-#include	<glib-object.h>
-
+/* This file is generated by glib-genmarshal, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */
+#include <glib-object.h>
 
 #ifdef G_ENABLE_DEBUG
 #define g_marshal_value_peek_boolean(v)  g_value_get_boolean (v)
@@ -47,9 +46,4 @@
 #define g_marshal_value_peek_object(v)   (v)->data[0].v_pointer
 #define g_marshal_value_peek_variant(v)  (v)->data[0].v_pointer
 #endif /* !G_ENABLE_DEBUG */
-
-
-/* VOID:VOID (gtkdatabox_marshal.list:1) */
-
-/* VOID:POINTER (gtkdatabox_marshal.list:2) */
 
