@@ -651,7 +651,6 @@ gtk_databox_xyyc_graph_class_init (GtkDataboxXYYCGraphClass *klass)
 static void
 gtk_databox_xyyc_graph_init (GtkDataboxXYYCGraph * xyyc_graph)
 {
-	xyyc_graph = xyyc_graph;
 }
 
 static gint
